--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						<h1> Abdul Haseeb Mansuri </h1>
 						<h2>I'm a
 							<span class="txt-rotate" data-period="1500"
-								data-rotate='[ "Web Designer", "Developer","Frontend Developer","Application Developer","Good Human" ]'></span>
+								data-rotate='[ "Web Designer", "Developer","Programmer",Frontend Developer","Application Developer","Abdul Hasib Mansuri" ]'></span>
 						</h2>
 					</div>
 				</div>
@@ -513,8 +513,8 @@
 										<i class="flaticon-analysis"></i>
 									</span>
 									<div class="desc">
-										<h3 class="mb-5">Web development</h3>
-										 <p>HTML, CSS , BOOTSTRAP </p> 
+										<h3 class="mb-5">Web Designing</h3>
+										 <p>HTML, CSS , BOOTSTRAP</p> 
 									</div>
 								</a>
 							</div>
@@ -524,8 +524,8 @@
 										<i class="flaticon-flasks"></i>
 									</span>
 									<div class="desc">
-										<h3 class="mb-5">C programing</h3>
-										<!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p> -->
+										<h3 class="mb-5">Programing Languages</h3>
+										 <p>C Language, R Language , Python , Django , Flutter </p>
 									</div>
 								</a>
 							</div>
@@ -547,8 +547,8 @@
 										<i class="flaticon-innovation"></i>
 									</span>
 									<div class="desc">
-										<h3 class="mb-5">Flutter</h3>
-										<!-- <p>Flutter</p> -->
+										<h3 class="mb-5">Technologys</h3>
+										<p>Mern , Flutter , React , Hadoop , Joomla</p>
 									</div>
 								</a>
 							</div>
@@ -558,8 +558,8 @@
 										<i class="flaticon-ux-design"></i>
 									</span>
 									<div class="desc">
-										<h3 class="mb-5">Mechine Lerning</h3>
-										<!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p> -->
+										<h3 class="mb-5">Machine Learning</h3>
+										<p>Scikit-learn ,Jupyter-notebooks ,Google-Colab,Matlab</p> 
 									</div>
 								</a>
 							</div>
@@ -569,8 +569,8 @@
 										<i class="flaticon-idea"></i>
 									</span>
 									<div class="desc">
-										<h3 class="mb-5">Cloud Computing</h3>
-										<!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p> -->
+										<h3 class="mb-5">Soft Skills</h3>
+										 <p>Adaptability,Team Work , Work ethic, Flexibility, attention to detail,</p>
 									</div>
 								</a>
 							</div>
@@ -677,30 +677,30 @@
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
 						style="background-image: url(images/s6.jpg);background-size: 70% 120%;">
-						<div class="overlay"></div>
+						<!-- <div class="overlay"></div> -->
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+							<!-- <h3><a href="#">Branding &amp; Illustration Design</a></h3> -->
+							<!-- <span>Web Design</span> -->
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
 						style="background-image: url(images/s7.jpg);background-size: 70% 120%">
-						<div class="overlay"></div>
+						<!-- <div class="overlay"></div> -->
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+							<!-- <h3><a href="#">Branding &amp; Illustration Design</a></h3> -->
+							<!-- <span>Web Design</span> -->
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
 						style="background-image: url(images/s11.jpg);background-size: 70% 120%">
-						<div class="overlay"></div>
+						<!-- <div class="overlay"></div> -->
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+							<!-- <h3><a href="#">Branding &amp; Illustration Design</a></h3> -->
+							<!-- <span>Web Design</span> -->
 						</div>
 					</div>
 				</div>
@@ -708,60 +708,60 @@
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
 						style="background-image: url(images/s8.jpg);background-size: 70% 120%">
-						<div class="overlay"></div>
+						<!-- <div class="overlay"></div> -->
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+							<!-- <h3><a href="#">Branding &amp; Illustration Design</a></h3> -->
+							<!-- <span>Web Design</span> -->
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
 						style="background-image: url(images/s9.jpg);background-size: 70% 120%">
-						<div class="overlay"></div>
+						<!-- <div class="overlay"></div> -->
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+							<!-- <h3><a href="#">Branding &amp; Illustration Design</a></h3> -->
+							<!-- <span>Web Design</span> -->
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
 						style="background-image: url(images/s10.jpg);background-size: 70% 120%">
-						<div class="overlay"></div>
+						<!-- <div class="overlay"></div> -->
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+							<!-- <h3><a href="#">Branding &amp; Illustration Design</a></h3> -->
+							<!-- <span>Web Design</span> -->
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
 						style="background-image: url(images/s12.png);background-size: 70% 120%">
-						<div class="overlay"></div>
+						<!-- <div class="overlay"></div> -->
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+							<!-- <h3><a href="#">Branding &amp; Illustration Design</a></h3> -->
+							<!-- <span>Web Design</span> -->
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
 						style="background-image: url(images/s14.jpeg);background-size: 100% 100%">
-						<div class="overlay"></div>
+						<!-- <div class="overlay"></div> -->
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+							<!-- <h3><a href="#">Branding &amp; Illustration Design</a></h3> -->
+							<!-- <span>Web Design</span> -->
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
 						style="background-image: url(images/s15.jpeg);background-size: 70% 120%">
-						<div class="overlay"></div>
+						<!-- <div class="overlay"></div> -->
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+							<!-- <h3><a href="#">Branding &amp; Illustration Design</a></h3> -->
+							<!-- <span>Web Design</span> -->
 						</div>
 					</div>
 				</div>
